spacing fix 2

--- a/src/Pages/Games.css
+++ b/src/Pages/Games.css
@@ -137,7 +137,7 @@
     background-repeat: no-repeat;
     overflow-x: hidden;
     overflow-y: hidden;
-    transform: scale(1.115);
+    transform: scale(1.215);
     display: block;
 }
 
